# imitation_learning

./: README.md  VIDEOS.MD
imitation_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
imitation_pkg/maps/: redbull_ring_obs.yaml
imitation_pkg/saved_models/: IL_Model.pth
imitation_pkg/scripts/: data_collector.py  data_filter.py  gap_follow.py  imitation_nn.py  imitation_node.py  mlp_constants.py  mps.py  opp_gap_follow.py  performance.py  train.py
